--- a/txt_files/TODO.txt
+++ b/txt_files/TODO.txt
@@ -14,10 +14,10 @@
 
 
 
-My Highest Score: 84988 - with 500 bonus per melon
+My Highest Score: 110843 - with 500 bonus per melon
 
 
-
+// alcohol - minus 1 health, 100 of need most?, screen shake
 
 
 
