character11 Easy Chars

--- a/txt_files/TODO.txt
+++ b/txt_files/TODO.txt
@@ -7,14 +7,64 @@
 
 
 - X Factors
+	Meh:
+		Jacque (double effect of pickups for 10 sec?)
+		D$ (doubles alc and removes alc effect and give health)
+		Sasha (rainbow? pick positive stuff up arond you)
+		JZ (dad bod, immunity + increase size)
+		Julia (JUUUULLIIIAAAAA)
+		Rabbi Berel (lchaim?)
+		Roy (drop pickups around you?)
+		Lucinda (become transparent)
+
+	Long:
+		Mady (wildcard, wait until everyone is done?)
+		Chloe (move pickups to one spot)
+		Lilah (Americanize everything?)
+
+	?:
+		Kaya ()
+		Andy ()
+		Kaya ()
+		Lucie ()
+		Coop ()
+		Meir ()
+		Portia ()
+
+
+Finished! :)
+	Abie
+	Jonah (missing 2 songs)
+	Hannah
+	Romie (missing 2 songs)
+	Ella (missing 3 songs)
+	Bri (missing 3 songs)
+	Alex (missing 3 songs)
+
+
+Difficulty Rank:
+	1) Abie
+	2) Alex
+	3) Romie
+	4) Hannah
+	5) Jonah
+	6) Ella
+	7) Bri
+
 
 - Billboards
 
 
+// My High Score as me: 42711
+
+
+// My Highest Score: 124852
 
 
 
-My Highest Score: 110843 - with 500 bonus per melon
+
+
+
 
 
 
