--- a/txt_files/TODO.txt
+++ b/txt_files/TODO.txt
@@ -16,15 +16,13 @@ TODO:
 	Easy: 
 
 	Meh:
-		Sasha (rainbow? pick positive stuff up arond you)
 		Julia (JUUUULLIIIAAAAA)
 		Rabbi Berel (lchaim?)
 		Roy (drop pickups around you?)
 
 	Long:
-		Chloe (move pickups to one spot)
-		Lilah (Americanize everything?)
-		Mady (wildcard, wait until everyone is done?)
+		Sasha (rainbow? pick positive stuff up arond you)
+		Lilah (Israeli-fy everything?)
 
 	?:
 		Kaya (tel aviv/florida?)
@@ -47,6 +45,8 @@ Finished! :)
 	Jacque (missing 3 songs)
 	Jordan (missing 2 songs)
 	Lucinda (missing 3 songs)
+	Chloe (missing 3 songs)
+	Mady (missing 3 songs)
 
 
 Difficulty Rank:
