--- a/txt_files/TODO.txt
+++ b/txt_files/TODO.txt
@@ -17,7 +17,7 @@ TODO:
 	Easy: 
 
 	Meh:
-		Israeli Sasha (arak?)
+		Israeli Sasha (add the beach stuff somehow)
 		Julia (JUUUULLIIIAAAAA)
 		Ollie Goldstein (hawaii)
 		Analise Levy (outdoorsy)
