--- a/txt_files/TODO.txt
+++ b/txt_files/TODO.txt
@@ -13,13 +13,16 @@ TODO:
 
 - Fix the inconsistencies with the slider degradation
 
+- change skis to black for maddie
+
+- change jcoop time slow to be longer and harder to fill up
+
+
 - X Factors
 	Easy: 
 
 	Meh:
-		Israeli Sasha (add the beach stuff somehow)
 		Julia (JUUUULLIIIAAAAA)
-		Ollie Goldstein (hawaii)
 		Analise Levy (outdoorsy)
 		Adeline Ellison (taylor swift/ greece / mamma mia)
 		
@@ -29,7 +32,7 @@ TODO:
 
 	?:
 		
-
+31 total Characters (28 + 3)
 
 Finished! :)
 	Abie
@@ -58,6 +61,9 @@ Finished! :)
 	Portia (missing 3 songs)
 	Studer (missing 3 songs)
 	Ido (missing 3 songs)
+	Israeli Sasha (missing 1 song)
+	Ollie Goldstein (missing 3 songs)
+
 
 
 Difficulty Rank:
