--- a/txt_files/TODO.txt
+++ b/txt_files/TODO.txt
@@ -15,15 +15,11 @@ TODO:
 
 - change skis to black for maddie
 
-- change jcoop time slow to be longer and harder to fill up
-
-
 - X Factors
 	Easy: 
 
 	Meh:
 		Julia (JUUUULLIIIAAAAA)
-		Analise Levy (outdoorsy)
 		Adeline Ellison (taylor swift/ greece / mamma mia)
 		
 
@@ -32,7 +28,7 @@ TODO:
 
 	?:
 		
-31 total Characters (28 + 3)
+31 total Characters (29 + 2)
 
 Finished! :)
 	Abie
@@ -63,6 +59,7 @@ Finished! :)
 	Ido (missing 3 songs)
 	Israeli Sasha (missing 1 song)
 	Ollie Goldstein (missing 3 songs)
+	Analise Levy (missing 3 songs)(coastline, rocky mountain high)
 
 
 
