--- a/txt_files/TODO.txt
+++ b/txt_files/TODO.txt
@@ -1,28 +1,22 @@
 TODO:
 
-- Billboards
+	- Billboards
 
-- Fix the inconsistencies with the slider degradation
+	- Fix the inconsistencies with the slider degradation
 
-- change skis to black for maddie
+	- change skis to black for maddie
 
-- make heels for ollie?
+	- make heels for ollie?
 
-- X Factors
-	Easy: 
+	- X Factors
+		Julia (JUUULLLLIIIIAAAAAAA)
 
-	Meh:
-		Julia (JUUUULLIIIAAAAA)
-		Adeline Ellison (taylor swift / greece / mamma mia)
+	- Mady Barth speed
+
+
 
 		
-
-	Long:
-		
-
-	?:
-		
-33 total Characters (31 + 2)
+33 total Characters (32 + 1)
 
 Finished! :)
 	Abie
@@ -57,6 +51,7 @@ Finished! :)
 	Tomer (missing 1 song)
 	Nathan (missing 3 songs)
 	Emma (missing 3 songs)
+	Adeline Ellison (missing 2 songs)
 
 
 // My Highest Score: 141368 as Kaya
